Add line number to Tokens, refactor

--- a/src/WhyNotLang.Web/Pages/Index.razor
+++ b/src/WhyNotLang.Web/Pages/Index.razor
@@ -1,6 +1,6 @@
 ﻿@page "/"
 @using WhyNotLang.Interpreter
-@using WhyNotLang.Interpreter.Evaluators.ExpressionValues;
+@using WhyNotLang.Interpreter.Evaluators.ExpressionValues
 @inject IExecutor Executor
 @inject IJSRuntime JsRuntime
 
