--- a/src/WhyNotLang.Web/Pages/Index.razor
+++ b/src/WhyNotLang.Web/Pages/Index.razor
@@ -12,6 +12,7 @@
 <p>
     <button class="btn btn-primary" @onclick="Toggle">Toggle variable</button>
     <button class="btn btn-primary" @onclick="Execute">Execute</button>
+    <button class="btn btn-primary" @onclick="Stop">Stop</button>
 </p>
 
 <textarea id="output" @bind="@output" readonly="readonly" class="form-control" rows="10">
@@ -49,6 +50,11 @@ end
             });
     }
 
+    void Stop()
+    {
+        Executor.Stop();
+    }
+
     void Toggle()
     {
         toggle = !toggle;
@@ -57,6 +63,7 @@ end
 
     async Task Execute()
     {
+        output = "";
         Executor.ProgramState.Clear();
         isRunning = true;
         Executor.Initialise(programCode);
