Canvas rendering and key handling

--- a/src/WhyNotLang.Web/Components/CanvasIO.razor
+++ b/src/WhyNotLang.Web/Components/CanvasIO.razor
@@ -1,3 +1,6 @@
-﻿@inherits CanvasIOBase
+﻿@using WhyNotLang.Web.Components
+@inherits CanvasIOBase
 
-<h3>CanvasIO</h3>
+<h5>Canvas IO</h5>
+
+<canvas id="myCanvas" width="400" height="400" style="border:1px solid #000000;"></canvas>
