--- a/src/WhyNotLang.Web/Components/CanvasIO.razor
+++ b/src/WhyNotLang.Web/Components/CanvasIO.razor
@@ -3,4 +3,4 @@
 
 <h5>Canvas IO</h5>
 
-<canvas id="myCanvas" width="400" height="400" style="border:1px solid #000000;"></canvas>
+<canvas id="myCanvas" width="400" height="400" style="border:1px solid #000000; background-color:black"></canvas>
