Allow tabs in code editor, improve layout

--- a/src/WhyNotLang.Web/Components/CanvasIO.razor
+++ b/src/WhyNotLang.Web/Components/CanvasIO.razor
@@ -1,6 +1,4 @@
 ﻿@using WhyNotLang.Web.Components
 @inherits CanvasIOBase
 
-<h5>Canvas IO</h5>
-
-<canvas id="myCanvas" width="400" height="400" style="border:1px solid #000000; background-color:black"></canvas>
+<canvas id="myCanvas" width="480" height="360"></canvas>
