--- a/src/WhyNotLang.Web/Components/TextIO.razor
+++ b/src/WhyNotLang.Web/Components/TextIO.razor
@@ -1,7 +1,5 @@
 ﻿@inherits TextIOBase
-<h5>Text IO</h5>
 
-<textarea id="output" @bind="@Output" readonly="readonly" class="form-control" rows="10">
+<textarea id="output" @bind="@Output" readonly="readonly" class="form-control">
 </textarea>
-Text input:
 <input id="input" @bind-value="@inputBuffer" @bind-value:event="oninput" readonly="@inputDisabled" @onkeydown="OnInputKeyDown" class="form-control" />
