--- a/src/WhyNotLang.Web/Components/Editor.razor
+++ b/src/WhyNotLang.Web/Components/Editor.razor
@@ -12,7 +12,7 @@
     </div>
     <div class="buttonContainer">
         <button class="btn btn-primary" @onclick="Execute">Execute</button>
-        <button class="btn btn-primary" @onclick="Stop">Stop</button>
+        <button class="btn btn-secondary" @onclick="Stop">Stop</button>
     </div>
 
         <textarea id="txtProgramCode" @bind="@programCode" readonly="@isRunning" class="form-control" rows="13"></textarea>
