--- a/src/WhyNotLang.Web/Pages/Index.razor
+++ b/src/WhyNotLang.Web/Pages/Index.razor
@@ -1,4 +1,10 @@
 ﻿@page "/"
+@page "/sample/{sampleName}"
 @using WhyNotLang.Web.Components;
 
-<Editor></Editor>
+<Editor SelectedSample="@SampleName"></Editor>
+
+@code {
+    [Parameter]
+    public string SampleName { get; set; } = "";
+}
