--- a/src/WhyNotLang.Web/wwwroot/css/site.css
+++ b/src/WhyNotLang.Web/wwwroot/css/site.css
@@ -188,3 +188,44 @@ app {
     text-align: center;
     margin-top: 5px;
 }
+
+.reference {
+    font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
+    padding: 0 40px 40px 40px;
+    max-width: 723px;
+}
+.reference pre {
+    background-color: #f6f8fa;
+    border-radius: 3px;
+    font-size: 85%;
+    line-height: 1.45;
+    overflow: auto;
+    padding: 16px;
+}
+
+.reference h1, h2, h3, h4 {
+    font-weight: 600;
+    margin-bottom: 16px;
+    margin-top: 24px;
+}
+
+.reference h1, h2 {
+    border-bottom: 1px solid #eaecef;
+    padding-bottom: .3em;
+}
+
+.reference h1 {
+    font-size: 2em;
+}
+
+.reference h2 {
+    font-size: 1.5em;
+}
+
+.reference h3 {
+    font-size: 1.25em;
+}
+
+.reference h4 {
+    font-size: 1em;
+}
