--- a/src/WhyNotLang.Web/Components/CanvasIO.razor
+++ b/src/WhyNotLang.Web/Components/CanvasIO.razor
@@ -1,4 +1,3 @@
-﻿@using WhyNotLang.Web.Components
-@inherits CanvasIOBase
+﻿@inherits CanvasIOBase
 
 <canvas id="myCanvas" width="480" height="360"></canvas>
