--- a/src/WhyNotLang.Web/Components/TextIO.razor
+++ b/src/WhyNotLang.Web/Components/TextIO.razor
@@ -2,4 +2,4 @@
 
 <textarea id="output" @bind="@Output" readonly="readonly" class="form-control">
 </textarea>
-<input id="input" @bind-value="@inputBuffer" @bind-value:event="oninput" readonly="@inputDisabled" @onkeydown="OnInputKeyDown" class="form-control" />
+<input id="input" @bind-value="@InputBuffer" @bind-value:event="oninput" readonly="@InputDisabled" @onkeydown="OnInputKeyDown" class="form-control" />
