Update to .net core 3.0 preview 8

--- a/src/WhyNotLang.Web/Components/Editor.razor
+++ b/src/WhyNotLang.Web/Components/Editor.razor
@@ -24,7 +24,7 @@
     <div class="column right">
         <h5 class="outputHead">Output</h5>
         <div class="textContainer">
-            <TextIO @ref="TextIO"></TextIO>
+            <TextIO @ref:suppressField @ref="TextIO"></TextIO>
         </div>
         <div>
             <CanvasIO></CanvasIO>
