Migrate to .net 6

--- a/WhyNotLang.Blazor/Pages/Index.razor
+++ b/WhyNotLang.Blazor/Pages/Index.razor
@@ -1,6 +1,6 @@
 ﻿@page "/"
 @page "/sample/{sampleName}"
-@using WhyNotLang.Web.Components;
+@using WhyNotLang.Blazor.Components;
 
 <Editor SelectedSample="@SampleName"></Editor>
 
