--- a/WhyNotLang.Blazor/wwwroot/css/app.css
+++ b/WhyNotLang.Blazor/wwwroot/css/app.css
@@ -4,7 +4,11 @@ html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
-app {
+.navbar-brand {
+    margin-left: 1.5rem;
+}
+
+#app {
     position: relative;
     display: flex;
     flex-direction: column;
